--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tinymce/tinymce-react": "^4.3.2",
     "appwrite": "^13.0.2",
+    "cors": "^2.8.5",
     "form": "^0.2.4",
     "html-react-parser": "^4.2.10",
     "react": "^18.2.0",
