--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "form": "^0.2.4",
     "html-react-parser": "^4.2.10",
+    "lucide-react": "^0.436.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook": "^0.0.1",
